--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-APP_ENV=teste
+APP_ENV=homologacao
 APP_DEBUG=true
 APP_KEY=CyCkBkOaBHAKRVPfVDONNw2K1aaWZNpM
 
-DB_HOST=local
-DB_DATABASE=local
-DB_USERNAME=local
-DB_PASSWORD=local
+DB_HOST=mysql524.umbler.com:41890
+DB_DATABASE=rcsoma
+DB_USERNAME=rcsoma
+DB_PASSWORD=123qwe!@#QWE
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
