--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_ENV=%APP_ENV%
 APP_DEBUG=false
 APP_KEY=CyCkBkOaBHAKRVPfVDONNw2K1aaWZNpM
 
-APP_ENV=%APP_ENV%
+DB_HOST=%DB_HOST%
 DB_DATABASE=%DB_DATABASE%
 DB_USERNAME=%DB_USERNAME%
 DB_USERNAME=%DB_USERNAME%
