env de producao

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ APP_KEY=CyCkBkOaBHAKRVPfVDONNw2K1aaWZNpM
 DB_HOST=%DB_HOST%
 DB_DATABASE=%DB_DATABASE%
 DB_USERNAME=%DB_USERNAME%
-DB_USERNAME=%DB_USERNAME%
+DB_PASSWORD=%DB_PASSWORD%
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
